<resources>
    <string name="app_name">CS5520_FinalProject_Team26</string>
    <string name="add_trivia_question">Add Trivia Question</string>
    <string name="enter_question">Enter Question:</string>
    <string name="options">Options</string>
    <string name="option_a">A</string>
    <string name="hint">Hint</string>
    <string name="option_b">B</string>
    <string name="option_c">C</string>
    <string name="option_d">D</string>
    <string name="answer">Answer</string>
    <string name="add_question">Add</string>
    <string name="leaderboard_title">Leaderboard</string>
    <string name="praise">Awesome! \nYou just earned a Geo-Coin!</string>
    <string name="add_question_button_label">Add Question</string>
    <string name="leaderboard">Leaderboard</string>
</resources>